...
            correct: correctAnswers,
            total: presenter.questionsAmount
        )
        let isNewRecord = correctAnswers > (previousBest?.correct ?? 0)
        let message = makeResultMessage(isNewRecod: isNewRecord)
        let alertModel = AlertModel(
            title: "Этот раунд окончен!",
            message: message,
            buttonTitle: "Сыграть еще раз",
            completion: {
                [weak self] in
                guard let self = self else { return }
                restartGame()
            }
        )
...
